autumn/tests/compile-fail/model_shard_key_unknown.stderr
error: shard_key field `nope` not found on model
  --> tests/compile-fail/model_shard_key_unknown.rs:11:1
   |
11 | #[shard_key = "nope"]
   | ^^^^^^^^^^^^^^^^^^^^^
